--wip-- [skip ci]

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -72,6 +72,7 @@ ki18n_wrap_ui(gitklient_SRCS
     dialogs/diffopendialog.ui
     dialogs/selectbranchestodiffdialog.ui
     dialogs/filehistorydialog.ui
+    dialogs/fileblamedialog.ui
 )
 
 add_executable(gitklient ${gitklient_SRCS})
