Add: search window

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -73,6 +73,7 @@ ki18n_wrap_ui(gitklient_SRCS
     dialogs/selectbranchestodiffdialog.ui
     dialogs/filehistorydialog.ui
     dialogs/fileblamedialog.ui
+    dialogs/searchdialog.ui
 )
 
 add_executable(gitklient ${gitklient_SRCS})
