--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,5 +59,5 @@ endif()
 add_subdirectory(icons)
 add_subdirectory(src)
 #add_subdirectory(gitklientmerge)
-#add_subdirectory(autotests)
+add_subdirectory(autotests)
 add_subdirectory(dolphinplugins)
