--- a/autotests/diff/CMakeLists.txt
+++ b/autotests/diff/CMakeLists.txt
@@ -2,7 +2,8 @@ include_directories(${CMAKE_SOURCE_DIR}/app)
 
 ecm_add_test(
     difftest.cpp
-    ../../core/diff/diff.cpp
+    ../../src/diff/diff.cpp
+    ../common/gittestmanager.cpp
     LINK_LIBRARIES Qt::Test Qt::Core
     TEST_NAME DiffTest
     NAME_PREFIX app-)
