--- a/src/git/CMakeLists.txt
+++ b/src/git/CMakeLists.txt
@@ -1,25 +1,36 @@
 set(
-    SOURCE
+    GIT_SOURCE
+    ${CMAKE_CURRENT_LIST_DIR}/branch.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/gitglobal.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/gitloglist.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/gitsubmodule.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/stash.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/abstractcontainer.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/filestatus.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/gitgraphlane.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/gitmanager.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/nonemptylinescommand.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/blamedata.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/gitfile.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/gitlog.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/gitremote.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/parameterescommand.cpp
 
-    ${CMAKE_CURRENT_SOURCE_DIR}/branch.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/gitglobal.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/gitloglist.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/gitsubmodule.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/stash.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/abstractcontainer.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/filestatus.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/gitgraphlane.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/gitmanager.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/nonemptylinescommand.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/blamedata.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/gitfile.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/gitlog.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/gitremote.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/parameterescommand.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/cache/logs.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/cache/cache.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/cache/remotescache.cpp
+
+    ${CMAKE_CURRENT_LIST_DIR}/commands/abstractcommand.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/commands/commandchangedfiles.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/commands/commandclone.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/commands/commandcommit.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/commands/commandfetch.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/commands/commandpull.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/commands/commandpush.cpp
 )
 
-add_subdirectory(cache)
-add_subdirectory(commands)
+#include(${CMAKE_CURRENT_LIST_DIR}/cache/CMakeLists.txt)
+#include(${CMAKE_CURRENT_LIST_DIR}/commands/CMakeLists.txt)
 
 #set(gitklient_SRCS ${SOURCE} PARENT_SCOPE)
-target_sources(gitklient PUBLIC ${SOURCE})
+#target_sources(gitklient PUBLIC ${SOURCE})
