--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,1 +1,5 @@
-kdoctools_create_handbook(index.docbook INSTALL_DESTINATION ${KDE_INSTALL_DOCBUNDLEDIR}/en SUBDIR gitklient)
+kdoctools_create_handbook(
+    index.docbook
+    INSTALL_DESTINATION ${KDE_INSTALL_DOCBUNDLEDIR}/en
+    SUBDIR gitklient
+)
