--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,11 +47,12 @@ jobs:
       - name: Build deb package
         #if: startsWith(github.ref, 'refs/tags/')
         run: |
+          cd build-cmake
           sudo cpack -G DEB
 
       - name: Create Release
         id: create_release
-        if: startsWith(github.ref, 'refs/tags/')
+        #if: startsWith(github.ref, 'refs/tags/')
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -63,7 +64,7 @@ jobs:
           
       - name: Upload Release Asset
         id: upload-release-asset 
-        if: startsWith(github.ref, 'refs/tags/')
+        #if: startsWith(github.ref, 'refs/tags/')
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
