--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,14 +45,14 @@ jobs:
           cmake --build .
           
       - name: Build deb package
-        #if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         run: |
           cd build-cmake
-          sudo cpack -G DEB
+          sudo cpack -G DEB -P gitklient.deb
 
       - name: Create Release
         id: create_release
-        #if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -64,12 +64,12 @@ jobs:
           
       - name: Upload Release Asset
         id: upload-release-asset 
-        #if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./my-artifact.zip
-          asset_name: my-artifact.zip
+          asset_path: ./build-cmake/gitklient.deb
+          asset_name: gitklient_${{github.ref}}_amd64.deb
           asset_content_type: application/vnd.debian.binary-package
