--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,33 +43,35 @@ jobs:
           cd build-cmake
           cmake .. ${{ matrix.additional_arguments }}  ${{ matrix.cmake_params }}
           cmake --build .
+          VAR=`cat version`
+          echo "vecrion=${VAR}" >> $GITHUB_ENV
           
       - name: Build deb package
-        if: startsWith(github.ref, 'refs/tags/')
+        #if: startsWith(github.ref, 'refs/tags/')
         run: |
           cd build-cmake
           sudo cpack -G DEB -P gitklient.deb
 
       - name: Create Release
         id: create_release
-        if: startsWith(github.ref, 'refs/tags/')
+        #if: startsWith(github.ref, 'refs/tags/')
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ env.version }}
+          release_name: Release ${{ env.version }}
           draft: false
           prerelease: false
           
       - name: Upload Release Asset
         id: upload-release-asset 
-        if: startsWith(github.ref, 'refs/tags/')
+        #if: startsWith(github.ref, 'refs/tags/')
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./build-cmake/gitklient.deb
-          asset_name: gitklient_${{github.ref}}_amd64.deb
+          asset_name: gitklient_${{env.version}}_amd64.deb
           asset_content_type: application/vnd.debian.binary-package
