--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,8 @@ name: CI Build
 
 on:
   push:
-    branches-ignore:
-      - "releases/**"
-    paths-ignore:
-      - "**.md"
+    branches:
+      - master
   pull_request:
     paths-ignore:
       - "**.md"
